<resources>
    <string name="app_name">ContactApp</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>